<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the editor -->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".ui.LoginActivity">
    <EditText

            android:id="@+id/username"
            android:hint="@string/prompt_username"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    <EditText

            android:id="@+id/password"
            android:hint="@string/prompt_password"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/signup"
                  android:text="@string/action_sign_up" android:layout_marginRight="20dp" android:padding="10dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/forget"
                  android:text="@string/action_forget_password" android:padding="10dp"/>

    </LinearLayout>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/login"
            android:text="@string/action_log_in" android:layout_gravity="center"/>

</LinearLayout>